# mda-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: normalize.rs  personal-mda.rs
src/: decode.rs  deliver.rs  lib.rs  normalize.rs  processing.rs  regex.rs
tests/: test_boundaries.rs  test_charset.rs  test_deliver.rs  test_encoded_words.rs  test_encoding.rs  test_fields.rs  test_processing.rs  test_regex.rs
